--- a/.env
+++ b/.env
@@ -1,1 +1,20 @@
-BOT_TOken=8560378485
+BOT_TOken=8560378485:AAFLsd71M7hAYEt-r0Y2oliIr7-mDwk9-9Q
+NODE_ENV=production
+
+Build Command
+Render runs this command to build your app before each deploy.
+$
+node index.js
+
+Edit
+Pre-Deploy CommandOptional
+Render runs this command before the start command. Useful for database migrations and static asset uploads.
+$
+
+Edit
+Start Command
+Render runs this command to start your app with each deploy.
+$
+npm install
+
+
